<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, LO52Messaging!</string>
    <string name="app_name">Another Android Instant Messenger</string>

    <!-- TRIER ACTIVITE PAR ACTIVITE -->


    <!-- LAUNCHER (LO52Messaging) -->
    <string name="launcher_connexion_btn">Connexion</string>
    <string name="launcher_username_error_tv">Vous devez indiquer un nom d\'utilisateur dans les préférences avant de pouvoir vous connecter.</string>
    <string name="launcher_welcome">Bienvenue,</string>
    <string name="launcher_wifi_warning">Vous devez être connecté à un réseau Wifi pour utiliser l\'application.</string>

    <!-- LOBBY -->
    <string name="lobby_tab_users">Utilisateurs</string>
    <string name="lobby_tab_conversations">Conversations</string>
    <string name="lobby_tab_map">Carte</string>
    <string name="lobby_alert_quit">Quitter l\'application</string>
    <string name="lobby_alert_quit_msg">Etes-vous sûr de vouloir quitter ? Vous serez déconnecté.</string>
    <string name="lobby_menu_about">A propos</string>

    <!-- USER LIST -->
    <string name="userlist_refresh_option">Rafraichir</string>
    <string name="userlist_no_user">Aucun utilisateur n\'a été détecté.\n\nCette vue se mettra automatiquement à jour lorsqu\'un utilisateur se connectera.</string>
    <string name="userlist_multi_user_menuitem">Choisir parmi plusieurs utilisateurs</string>
    <string name="userlist_multi_user_start">Commencer la conversation</string>
    <string name="userlist_multi_select_multi">Sélection multiple</string>
    <string name="userlist_multi_select_simple">Sélection unique</string>
    <string name="userlist_error_no_user">Vous devez spécifier au moins un utilisateur.</string>
    <string name="userlist_new_connection">vient de se connecter</string>

    <!-- CONVERSATIONS -->
    <string name="conversations_tab_name">Conversations</string>
    <string name="conversations_none">Vous n\'avez aucune conversation en cours.</string>
    <string name="conversations_close_current">Fermer la conversation courante</string>
    <string name="conversations_name">::Nom de la conversation::</string>
    <string name="conversations_media_btn">Choisir un média</string>
    <string name="conversations_send_btn">Envoyer</string>
    <string name="conversations_name_prefix">Conversation avec </string>
    <string name="conversations_myself">Moi</string>
    <string name="conversation_creation_toast_sing">vient de créer une conversation avec vous.</string>
    <string name="conversation_creation_toast_plur">viennent de créer une conversation avec vous.</string>
    <string name="conversation_user_received_message">vous a envoyé un message.</string>
    <string name="conversation_file_send_begin">Envoi du fichier…</string>
    <string name="conversation_file_receive_begin">Réception d\'un fichier…</string>

    <!-- PREFERENCES -->
    <string name="preferencesActivity">Préférences générales</string>
    <string name="preferencesUsername">Nom d\'utilisateur</string>
    <string name="preferencesUsernameDesc">Votre nom tel qu\'il apparaîtra aux autres utilisateurs.</string>
    <string name="preferencesUserAutoLogin">Connexion auto.</string>
    <string name="preferencesUserAutoLoginDesc">Connexion automatique au démarrage de l\'application.</string>
    <string name="preferencesServiceTitle">Services</string>
    <string name="preferencesServiceNetwork">Service réseau toujours allumé</string>
    <string name="preferencesServiceNetworkDesc">Garder le service réseau toujours allumé en quittant l\'appli.</string>
    <string name="preferencesNotifications">Notifications d\'évènements manqués</string>
    <string name="preferencesNotifToast">Notifications textuelles</string>
    <string name="preferencesNotifToastDesc">Afficher une notification pour les évènements manqués (nouveau message, …)</string>
    <string name="preferencesNotifVibration">Vibrations</string>
    <string name="preferencesNotifVibrationDesc">Faire vibrer le téléphone pour les évènements manqués (nouveau message, …)</string>
    <string name="preferencesConfirmToQuit">Confirmation pour quitter</string>
    <string name="preferencesConfirmToQuitDesc">Afficher une demande de confirmation avant de quitter l\'application.</string>
    <string name="preferencesDev">Options de développement</string>
    <string name="preferencesDev_emulator">Emulateur</string>
    <string name="preferencesDev_emulatorDesc">Activer le mode de développement sur émulateur</string>
    <string name="preferencesDev_portLocal">Port entrant</string>
    <string name="preferencesDev_portDistant">Port distant</string>

    <!-- FILE PICKER -->
    <string name="filePicker_invalid_ext">Extension de fichier invalide</string>
    <string name="filePicker_cant_read">ne peut pas être ouvert en lecture</string>
    <string name="filePicker_new">Nouveau</string>
    <string name="filePicker_select">Sélectionner</string>
    <string name="filePicker_name">Nom : </string>
    <string name="filePicker_cancel">Annuler</string>
    <string name="filePicker_save">Sauvegarder</string>
    <string name="filePicker_no_data">Aucune donnée</string>

    <!-- MAP ACTIVITY -->
    <string name="maps_user_position">Vous êtes ici.</string>
    <string name="maps_user_distance_from_user">Distance :</string>

    <!-- MENUS -->
    <string name="preferencesTitle">Préférences</string>
    
    <!-- ABOUT -->
    <string name="aboutProjectDesc">Projet de LO52\nPrintemps 2012 - UTBM</string>
    <string name="aboutProjectAuthors">Adrien Baud\nFrançois Laithier\nMathieu Paret</string>

    <!-- AUTRES -->
    <string name="image_content_description"></string>
    <string name="generic_yes">Oui</string>
    <string name="generic_no">Non</string>
    <string name="generic_error">Oops… Une erreur s\'est produite</string>

</resources>