<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/preferencesActivity" >
        
        <EditTextPreference
            android:key="prefs_userName"
            android:summary="@string/preferencesUsernameDesc"
            android:title="@string/preferencesUsername" >
        </EditTextPreference>

        <CheckBoxPreference
            android:key="prefs_autoLogin"
            android:summary="@string/preferencesUserAutoLoginDesc"
            android:title="@string/preferencesUserAutoLogin" >
        </CheckBoxPreference>
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefs_confirmToQuit"
            android:summary="@string/preferencesConfirmToQuitDesc"
            android:title="@string/preferencesConfirmToQuit" >
        </CheckBoxPreference>
        
    </PreferenceCategory>
    
    
    <PreferenceCategory android:title="@string/preferencesNotifications" >
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefs_notifToast"
            android:summary="@string/preferencesNotifToastDesc"
            android:title="@string/preferencesNotifToast" >
        </CheckBoxPreference>
        
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="prefs_notifVibrator"
            android:summary="@string/preferencesNotifVibrationDesc"
            android:title="@string/preferencesNotifVibration" >
        </CheckBoxPreference>
        
    </PreferenceCategory>
    
    
    <!--<PreferenceCategory android:title="@string/preferencesServiceTitle" >
        
        <CheckBoxPreference
            android:key="prefs_networkServiceKeepAlive"
            android:summary="@string/preferencesServiceNetworkDesc"
            android:title="@string/preferencesServiceNetwork" >
        </CheckBoxPreference>
        
    </PreferenceCategory>-->
    
    
    <PreferenceCategory android:title="Options de dev" >
        <CheckBoxPreference
            android:key="dev_prefs_emulateur"
            android:summary="Activer mode dev"
            android:title="Emulateur" >
        </CheckBoxPreference>

        <EditTextPreference
            android:key="dev_prefs_port_entrant"
            android:numeric="integer"
            android:summary="(Dev) Port entrant"
            android:title="Port entrant" >
        </EditTextPreference>
        
        <EditTextPreference
            android:key="dev_prefs_port_distant"
            android:numeric="integer"
            android:summary="(Dev) Port distant"
            android:title="Port distant" >
        </EditTextPreference>
    </PreferenceCategory>

</PreferenceScreen>