<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/fdLinearLayoutList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/fdLinearLayoutSelect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/fdButtonNew"
                    style="@style/bouton"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="@string/filePicker_new" >
                </Button>

                <Button
                    android:id="@+id/fdButtonSelect"
                    style="@style/bouton"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="@string/filePicker_select" >
                </Button>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fdLinearLayoutCreate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:id="@+id/textViewFilename"
                style="@style/sous_titre"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/filePicker_name" />

            <EditText
                android:id="@+id/fdEditTextFile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint=""
                android:text="" >
            </EditText>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/fdButtonCancel"
                    style="@style/bouton"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight=".3"
                    android:text="@string/filePicker_cancel" >
                </Button>

                <Button
                    android:id="@+id/fdButtonCreate"
                    style="@style/bouton"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight=".7"
                    android:text="@string/filePicker_save" >
                </Button>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/fdLinearLayoutList"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/path"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/view" />

        <TextView
            android:id="@android:id/empty"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/filePicker_no_data" />
    </LinearLayout>

</RelativeLayout>