<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="3dp" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/conversation_name"
            android:layout_width="fill_parent"
            android:layout_height="24dp"
            android:paddingBottom="4dp"
            android:paddingLeft="2dp"
            android:text="@string/conversations_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/conversation_content"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:cursorVisible="false"
            android:clickable="false"
            android:editable="false"
            android:ems="10"
            android:inputType="textMultiLine" >
        </EditText>

        <EditText
            android:id="@+id/conversation_usermessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/conversation_media_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/conversations_media_btn" />

        <Button
            android:id="@+id/conversation_send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/conversations_send_btn" />
    </LinearLayout>

</LinearLayout>